[package]
name = "openra2"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.17.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
